--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -9,5 +9,10 @@ jobs:
   import-web-data:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: git submodule update --remote
+      - name: Git checkout
+        uses: actions/checkout@v3
+      - name: git
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email '<>'
+          git submodule update --remote
